--- a/data_search.html
+++ b/data_search.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pencarian Spesifikasi GSMArena</title>
-    <link rel="stylesheet" href="/style_search">
+    <link rel="stylesheet" href="style_search.css">
 </head>
 <body>
 
@@ -35,7 +35,7 @@
     </div>
     
     <!-- 2. Hubungkan Logika JavaScript ANDA -->
-    <script src="/data_search"></script>
+    <script src="data_search.js"></script>
 
 </body>
 </html>
