--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Web Multifungsi - Beranda</title>
     
     <!-- Memuat file CSS kustom (style.css) -->
-    <link rel="stylesheet" href="/style">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container"> 
@@ -18,7 +18,7 @@
         <div class="feature-grid">
 
             <!-- FITUR 1: PENCARIAN GSMARENA -->
-            <a href="/data_search" class="feature-card">
+            <a href="data_search.html" class="feature-card">
                 <div class="card-content">
                     <span class="card-icon">📱</span>
                     <h2>Pencarian Data GSMArena</h2>
